completed the batch upload feature
