# src/ExamPortal.API.Models/BatchUpload200Response.cs
@@ -1,0 +1,135 @@
+/*
+ * Exam Portal API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+using System;
+using System.Linq;
+using System.Text;
+using System.Collections.Generic;
+using System.ComponentModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using ExamPortal.API.Converters;
+
+namespace ExamPortal.API.Models
+{ 
+    /// <summary>
+    /// 
+    /// </summary>
+    [DataContract]
+    public partial class BatchUpload200Response : IEquatable<BatchUpload200Response>
+    {
+        /// <summary>
+        /// Gets or Sets SuccessCount
+        /// </summary>
+        /* <example>98000</example> */
+        [DataMember(Name="successCount", EmitDefaultValue=true)]
+        public int SuccessCount { get; set; }
+
+        /// <summary>
+        /// Gets or Sets ErrorCount
+        /// </summary>
+        /* <example>12</example> */
+        [DataMember(Name="errorCount", EmitDefaultValue=true)]
+        public int ErrorCount { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class BatchUpload200Response {\n");
+            sb.Append("  SuccessCount: ").Append(SuccessCount).Append("\n");
+            sb.Append("  ErrorCount: ").Append(ErrorCount).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (obj is null) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((BatchUpload200Response)obj);
+        }
+
+        /// <summary>
+        /// Returns true if BatchUpload200Response instances are equal
+        /// </summary>
+        /// <param name="other">Instance of BatchUpload200Response to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(BatchUpload200Response other)
+        {
+            if (other is null) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    SuccessCount == other.SuccessCount ||
+                    
+                    SuccessCount.Equals(other.SuccessCount)
+                ) && 
+                (
+                    ErrorCount == other.ErrorCount ||
+                    
+                    ErrorCount.Equals(other.ErrorCount)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    
+                    hashCode = hashCode * 59 + SuccessCount.GetHashCode();
+                    
+                    hashCode = hashCode * 59 + ErrorCount.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(BatchUpload200Response left, BatchUpload200Response right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(BatchUpload200Response left, BatchUpload200Response right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
